rust/macros/tests/invalid/target/rls/debug/deps/single_argument_rs-0ac2b67e204a70de.d
e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\single_argument_rs-0ac2b67e204a70de.rmeta: single-argument.rs

e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\single_argument_rs-0ac2b67e204a70de.d: single-argument.rs

single-argument.rs:
